# coercex

./: AGENTS.md  README.md  pyproject.toml  test-targets.txt
assets/: demo.cast  record.sh
research/: coercer-open-pipe-discovery.md  coercex-vs-coercer-comparison.md  opsec-smb-handshake.md  smb2-session-multiplexing-type1.md
src/coercex/: __init__.py  __main__.py  cli.py  connection.py  errors.py  listener.py  models.py  net.py  pipes.py  redirect.py  relay.py  scanner.py  unc.py  utils.py
src/coercex/cli/: __init__.py  display.py  options.py  output.py
src/coercex/listener/: __init__.py  ntlm.py  smb2.py
src/coercex/methods/: __init__.py  base.py  ms_dfsnm.py  ms_efsr.py  ms_even.py  ms_fsrvp.py  ms_par.py  ms_rprn.py  ms_tsch.py
tests/: test_display.py  test_errors.py  test_listener.py  test_listener_callback.py  test_listener_race.py  test_methods.py  test_ms_rprn.py  test_pipe_discovery.py  test_pipes.py  test_scanner_attempt.py  test_utils.py
