[project]
name = "coercex"
version = "0.1.0"
description = "Async NTLM authentication coercion scanner and fuzzer"
requires-python = ">=3.11"
dependencies = [
    "impacket>=0.11.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
windows = ["pydivert>=2.1.0"]

[project.scripts]
coercex = "coercex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coercex"]
