[project]
name = "coercex"
version = "0.1.0"
description = "Async NTLM authentication coercion scanner and fuzzer"
requires-python = ">=3.13"
dependencies = [
    "impacket>=0.12.0",
    "typer>=0.15.0",
    "rich>=13.7.0",
    "pydivert>=2.1.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[project.scripts]
coercex = "coercex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coercex"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
